
plugins {
    id 'java-library'
}

group = 'com.accurx'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    api 'org.slf4j:slf4j-api:2.0.9'
    implementation 'com.google.guava:guava:32.1.3-jre'

    // Logging
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'ch.qos.logback:logback-classic:1.4.11'

    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
    testImplementation 'com.google.guava:guava:33.0.0-jre'
    testImplementation 'com.squareup.okio:okio:3.9.0'
    testImplementation 'net.bytebuddy:byte-buddy-agent:1.14.12'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

compileJava {
    options.compilerArgs += '--enable-preview'
}

compileTestJava {
    options.compilerArgs += '--enable-preview'
}

test {
    useJUnitPlatform()
    jvmArgs = [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.time=ALL-UNNAMED',
        '--add-opens', 'java.base/java.net=ALL-UNNAMED',
        '--add-opens', 'java.base/java.net.http=ALL-UNNAMED',
        '--add-exports', 'java.base/java.net.http=ALL-UNNAMED',
        '--enable-preview'
    ]
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--add-opens=java.base/java.net.http=ALL-UNNAMED"
}

tasks.withType(Test) {
    jvmArgs += "--add-opens=java.base/java.net.http=ALL-UNNAMED"
    jvmArgs += "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED" // Sometimes also needed for reflection
}
